--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-image: url("background-1.jpg");
+  background-image: url("background.jpg");
   background-size: cover;
 }
 #overlay {
