--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,8 @@ body {
   position: fixed;
   width: 100vw;
   height: 100vh;
-  background-color: rgb(82, 63, 253);
-  opacity: 0.4;
+  background-color: rgb(27, 23, 63);
+  opacity: 0.3;
   z-index: -1;
 }
 
@@ -30,6 +30,7 @@ body {
 }
 
 .brand {
+  color: rgb(29, 29, 153);
 }
 
 .purchase-btn {
@@ -81,7 +82,8 @@ body {
 
 .main-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: center;
   /* background-color: darkgray; */
   /* border: 2px solid red; */
   width: 50%;
@@ -104,10 +106,24 @@ body {
 }
 
 img {
-  width: 100%;
-  height: 100%;
+  width: 70%;
+  height: 70%;
 }
 
+.btn-product {
+  width: 15%;
+  height: 15%;
+  background-color: transparent;
+  border: 0;
+  color: white;
+}
+
+.btn-product:hover {
+  color: rgb(29, 29, 153);
+  background-color: rgba(255, 255, 255, 0.2);
+  padding: 1%;
+  border-radius: 50%;
+}
 .review-link {
   text-decoration: none;
   color: white;
